src/objects/tdc_tsw__SMSIncomingAlert__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Setting for incoming alert</description>
    <fields>
        <fullName>tdc_tsw__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>tdc_tsw__Optout__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Optout</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tdc_tsw__Read__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Read</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tdc_tsw__Reply__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reply</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tdc_tsw__Value__c</fullName>
        <label>Value</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <label>SMS Incoming Alert</label>
</CustomObject>